fix: add vertical alignment to header

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
   background-color: var(--dark-color);
   color: white;
   display: flex;
+  align-items: center;
   padding: 24px 15%;
 }
 
